# richer_progress

./: .gitignore  LICENSE  README.md  pyproject.toml
src/richer_progress/: __init__.py  __main__.py  distributed.py  multiprocessing.py  progress.py  testing.py
tests/: conftest.py  test_dask_jobqueue.py  test_multiprocessing.py  test_progress.py  test_rich.py  test_richer_progress.py
