[project]
name = "richer-progress"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Simon-Martin Schröder", email = "mschroeder@geomar.de" }
]
requires-python = ">=3.13"
dependencies = [
    "humanize>=4.13.0",
    "rich>=14.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
addopts = "--cov=src/richer_progress --cov-report html --cov-report lcov:coverage/lcov.info"

[tool.coverage.run]
concurrency = ["thread", "multiprocessing"]
omit = [
    "tests/*",
    "src/richer_progress/__main__.py",
]