[project]
name = "richer-progress"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Simon-Martin Schröder", email = "mschroeder@geomar.de" }
]
requires-python = ">=3.13"
dependencies = [
    "humanize>=4.13.0",
    "netifaces>=0.11.0",
    "rich>=14.1.0",
]

[project.optional-dependencies]
distributed = [
    "dask-jobqueue>=0.9.0",
    "distributed>=2025.9.1",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
addopts = "--cov=src/richer_progress --cov-report html --cov-report lcov:coverage/lcov.info"

[tool.coverage.run]
concurrency = ["thread", "multiprocessing"]
omit = [
    "tests/*",
    "src/richer_progress/__main__.py",
]
